AUS-243: CHORD: Persist all output